test/bad/check/BadDefault.hs
module BadDefault where

class BadDefault a where
  bad :: a
  bad = 1
